k8s/admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: mern
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: admin
          image: 041659741300.dkr.ecr.ap-south-1.amazonaws.com/mealify_admin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: mern
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
