k8s/backend-seployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mern
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: backend
          image: 041659741300.dkr.ecr.ap-south-1.amazonaws.com/mealify_backend:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mern
spec:
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
